--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,13 +91,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [win32,win64]
-        variant: [gpl,gpl 5.0,gpl-shared,gpl-shared 5.0]
+        target: [win64]
+        variant: [nonfree]
         include:
           - target: linux64
-            variant: gpl
-          - target: linux64
-            variant: gpl 5.0
+            variant: nonfree
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -136,13 +134,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [win32,win64]
-        variant: [gpl,gpl 5.0,gpl-shared,gpl-shared 5.0]
+        target: [win64]
+        variant: [nonfree]
         include:
           - target: linux64
-            variant: gpl
-          - target: linux64
-            variant: gpl 5.0
+            variant: nonfree
     steps:
       - name: Checkout
         uses: actions/checkout@v2
