--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [win32,win64,linux64]
+        target: [win64,linux64]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
